ExchangeRatesApp - dotnet api - fixed returned statuses and added cache for currency codes list

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 #/ExchangeRatesApi/ExchangeRatesApi/ExchangeRatesApi.csproj.user
 #/ExchangeRatesApi/ExchangeRatesApi/appsettings.Development.json
 #/ExchangeRatesApi/ExchangeRatesApi/appsettings.Development.json
+/Angular/ExchangeRatesApp/.vscode
