--- a/ExchangeRatesApi/ExchangeRatesApi/ExchangeRatesApi.csproj
+++ b/ExchangeRatesApi/ExchangeRatesApi/ExchangeRatesApi.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;8618</NoWarn>
+    <NoWarn>1701;1702;8618;8603</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;8618</NoWarn>
+    <NoWarn>1701;1702;8618;8603</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,4 +29,7 @@
     <Folder Include="Features\ExchangeRate\Command\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="ExchangeRatesApi.Tests" />
+  </ItemGroup>
 </Project>
