ExchangeRatesApi - code cleaning, logger config, added some tests

--- a/ExchangeRatesApi/ExchangeRatesApi/nlog.config
+++ b/ExchangeRatesApi/ExchangeRatesApi/nlog.config
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true"
+	  internalLogLevel="Info"
+	  internalLogFile="${basedir}/logs/internal-nlog.txt">
 
     <!-- Definitions of logging targets -->
     <targets>
-        <target name="file" xsi:type="File" fileName="logs/logfile.txt" layout="${longdate}|${level}|${logger}|${message}${exception:format=toString}" />
-        <target name="console" xsi:type="Console" layout="${longdate}|${level}|${logger}|${message}${exception:format=toString}" />
+    <target name="file" xsi:type="File" fileName="logs/logfile.txt" layout="${longdate}|${level}|${logger}|${message}${exception:format=toString}" />
+    <target name="console" xsi:type="Console" layout="${longdate}|${level}|${logger}|${message}${exception:format=toString}" />
     </targets>
 
     <!-- Logging rules -->
     <rules>
-        <logger name="*" minlevel="Info" writeTo="console" />
-        <logger name="*" minlevel="Error" writeTo="file" />
+      <logger name="Microsoft.*" maxlevel="Error" final="true" />
+        
+      <logger name="*" minlevel="Info" writeTo="console" />
+      <logger name="*" minlevel="Error" writeTo="file" />
     </rules>
 </nlog>
