--- a/ExchangeRatesApi/ExchangeRatesApi.Tests/ExchangeRatesApi.Tests.csproj
+++ b/ExchangeRatesApi/ExchangeRatesApi.Tests/ExchangeRatesApi.Tests.csproj
@@ -10,11 +10,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;1998</NoWarn>
+    <NoWarn>1701;1702;1998;8618;8603</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;1998</NoWarn>
+    <NoWarn>1701;1702;1998;8618;8603</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
